--- a/app/views/reports/_moving-time.html.erb
+++ b/app/views/reports/_moving-time.html.erb
@@ -335,12 +335,12 @@
             $('<td style="background:#ff0000;">' + ajaxData[i].value + '</td>').appendTo('.tbody-value').ready(function () {
             });
           } else if (ajaxData[i].value < ajaxData[i].target_min) {
-            charts_value.push({id: ajaxData[i].id, color: 'limegreen', y: ajaxData[i].value});
-            $('<td style="background:#FFB90F;">' + ajaxData[i].value + '</td>').appendTo('.tbody-value').ready(function () {
+            charts_value.push({id: ajaxData[i].id, color: '#00FF7F', y: ajaxData[i].value});
+            $('<td style="background:white;">' + ajaxData[i].value + '</td>').appendTo('.tbody-value').ready(function () {
             });
           } else {
-            charts_value.push({id: ajaxData[i].id, color: 'limegreen', y: ajaxData[i].value});
-            $('<td style="background:limegreen;">' + ajaxData[i].value + '</td>').appendTo('.tbody-value').ready(function () {
+            charts_value.push({id: ajaxData[i].id, color: '#00FF7F', y: ajaxData[i].value});
+            $('<td style="background:#00FF7F;">' + ajaxData[i].value + '</td>').appendTo('.tbody-value').ready(function () {
             });
           }
         }
@@ -457,7 +457,7 @@
               type: 'column',
               name: 'moving-time',
               data: charts_value,
-              color: 'limegreen'
+              color: '#00FF7F'
             }, {
               name: 'TargetMax',
               data: charts_target_max,
