--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -18,7 +18,7 @@
 
       <div class="col-sm-3" style="padding-top: 10px;padding-bottom:10px;border-left: 1px solid #ccc; display: flex;">
         <div style="margin-top: 10px;">
-          <input type="number" style="width: 60px;height: 20px; color:black;" class="RecentTime" step="5">
+          <input type="number" maxlength="7" style="width: 60px;height: 20px; color:black; padding-left: 5px;margin-left: 20px; text-align: center;" class="RecentTime" step="5">
           <label>Min</label>
         </div>
         <button class="btn btn-primary RecentTimeBtn" style="width: 60px;">Search</button>
