--- a/app/views/reports/_moving-time.html.erb
+++ b/app/views/reports/_moving-time.html.erb
@@ -389,8 +389,18 @@
           tooltip: {
             valueSuffix: 's',
             formatter: function () {
-              return '<span><b>' + this.x.split('#')[0] +
-                  '</b><br/><b>' + this.series.name + ':</b><b>' + this.y + ' s</b><br/><b>TotalCount:</b><b>' + this.x.split('#')[2] + '</b><span>';
+              if ($('#from_ipad').val()) {
+                if(this.series.name == "moving-time"){
+                  return '<span><b>' + this.x.split('#')[0] +
+                      '</b><br/><b>CycleTime:</b><b>' + this.y + ' s</b><br/><b>TotalCount:</b><b>' + this.x.split('#')[2] + '</b><br/><button  onclick=go_history('+ productLine + ',' + chartdatatype + ',' + this.point.id + '); class="btn btn-primary">Go Detail</button><span>';
+                  }else{
+                    return '<span><b>' + this.x.split('#')[0] +
+                    '</b><br/><b>' + this.series.name + ':</b><b>' + this.y + ' s</b><br/><b>TotalCount:</b><b>' + this.x.split('#')[2] + '</b><span>';
+                  }
+              }else {
+                return '<span><b>' + this.x.split('#')[0] +
+                    '</b><br/><b>' + this.series.name + ':</b><b>' + this.y + ' s</b><br/><b>TotalCount:</b><b>' + this.x.split('#')[2] + '</b><span>';
+              }
             },
             style: {
               color: ChartStyle.tooltips_font_color
@@ -414,25 +424,25 @@
               events: {
                 click: function (e) {
                   if ($('#from_ipad').val()) {
-                    var over_id = "Line_" + productLine + "_interval_" + chartdatatype + "_box_" + e.point.id;
-                    if (window.localStorage) {
-                      localStorage.box_msg = over_id;
-                      localStorage.box_name = e.point.category;
-                      localStorage.pre_url = window.location.host + '/reports#moving_time';
-                      localStorage.recent_time = $('.RecentTime').val();
-                      var entity_group_id = e.point.id;
-                      window.location.href = "/reports?from_ipad=true&part=105&entity_group_id=" + entity_group_id;
-                    } else {
-                      alert('This browser does NOT support localStorage,please change browser.');
-                    }
-//                    if (clickDetected) {
+//                     var over_id = "Line_" + productLine + "_interval_" + chartdatatype + "_box_" + e.point.id;
+//                     if (window.localStorage) {
+//                       localStorage.box_msg = over_id;
+//                       localStorage.box_name = e.point.category;
+//                       localStorage.pre_url = window.location.host + '/reports#moving_time';
+//                       localStorage.recent_time = $('.RecentTime').val();
+//                       var entity_group_id = e.point.id;
+//                       window.location.href = "/reports?from_ipad=true&part=105&entity_group_id=" + entity_group_id;
+//                     } else {
+//                       alert('This browser does NOT support localStorage,please change browser.');
+//                     }
+// //                    if (clickDetected) {
 
-//                    } else {
-//                      clickDetected = true;
-//                      setTimeout(function () {
-//                        clickDetected = false;
-//                      }, 500);
-//                    }
+// //                    } else {
+// //                      clickDetected = true;
+// //                      setTimeout(function () {
+// //                        clickDetected = false;
+// //                      }, 500);
+// //                    }
                   } else {
                     var over_id = "Line_" + productLine + "_interval_" + chartdatatype + "_box_" + e.point.id;
                     if (window.localStorage) {
@@ -474,5 +484,19 @@
         remove_loading();
       }
     });
+  }
+
+ function go_history(productLine , chartdatatype, id){
+    var over_id = "Line_" + productLine + "_interval_" + chartdatatype + "_box_" + id;
+    if (window.localStorage) {
+      localStorage.box_msg = over_id;
+      localStorage.box_name = "ipad_moving_time_category";
+      localStorage.pre_url = window.location.host + '/reports#moving_time';
+      localStorage.recent_time = $('.RecentTime').val();
+      var entity_group_id = id;
+      window.location.href = "/reports?from_ipad=true&part=105&entity_group_id=" + entity_group_id;
+    } else {
+      alert('This browser does NOT support localStorage,please change browser.');
+    }
   }
 </script>
