--- a/app/views/reports/_moving-cycle.html.erb
+++ b/app/views/reports/_moving-cycle.html.erb
@@ -306,7 +306,7 @@
         $('<td>CycleTime</td>').appendTo('.tbody-cycle-time').ready(function () {
         });
 
-        $('<td>MovingTime</td>').appendTo('.tbody-moving-time').ready(function () {
+        $('<td>WaitingTime</td>').appendTo('.tbody-moving-time').ready(function () {
         });
 
         $('<td>Target Max</td>').appendTo('.tbody-target-max').ready(function () {
@@ -358,7 +358,7 @@
             backgroundColor: ChartStyle.ChartBackground
           },
           title: {
-            text: 'Moving & Cycle Time', x: -20, //center
+            text: 'Waiting & Cycle Time', x: -20, //center
             style: {
               color: ChartStyle.label_font_color
             }
