--- a/app/views/reports/_moving-time-history.html.erb
+++ b/app/views/reports/_moving-time-history.html.erb
@@ -41,7 +41,7 @@
 <div class="col-sm-12 moving-time-title" style="background: #fefefe;border-bottom: 4px solid #000;height: 70px;line-height: 20px;padding-top:15px;text-align: center;">
   <div class="col-sm-3" style="border-right: 1px solid #ccc;margin-top: -5px;">
     <label>Condition</label>
-    <p style="padding-bottom: 5px;">Moving Time History Line Chart</p>
+    <p style="padding-bottom: 5px;">Waiting Time History Line Chart</p>
   </div>
   <div class="col-sm-6" style="display: flex;border-right: 1px solid #ccc;padding-left:40px;">
     <input type="text" readonly class="datetimepicker" style="width: 170px;" id="start_time" title="Start Time">&emsp;
