--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -28,10 +28,10 @@
       <!--Hours<i class="icon-chevron-right indicate"></i></a></li>-->
 
       <li><a menu="moving_time" href="#moving_time"><i class="icon-time mark"></i>
-        MovingTime Detail<i class="icon-chevron-right indicate"></i></a></li>
+        WaitingTime Detail<i class="icon-chevron-right indicate"></i></a></li>
 
       <li><a menu="moving_cycle" href="#moving_cycle"><i class="glyphicon glyphicon-stats mark"></i>
-        Moving And Cycle Time<i class="icon-chevron-right indicate"></i></a></li>
+        Waiting And Cycle Time<i class="icon-chevron-right indicate"></i></a></li>
 
       <li><a menu="scram_time" href="#scram_time"><i class="glyphicon glyphicon-warning-sign mark"></i>
         Scram Time<i class="icon-chevron-right indicate"></i></a></li>
