--- a/app/views/reports/_tv_cycle_time.html.erb
+++ b/app/views/reports/_tv_cycle_time.html.erb
@@ -193,13 +193,13 @@
         break;
       case "m":
         return {
-          name: "MovingTime -- ",
+          name: "WaitingTime -- ",
           url: "moving_kpi_data"
         };
         break;
       case "mc":
         return {
-          name: "Cycle And MovingTime -- ",
+          name: "Waiting&Cycle Time -- ",
           url: "cycle_and_moving_kpi_data"
         };
         break;
