--- a/app/views/kpi_entries/index.html.erb
+++ b/app/views/kpi_entries/index.html.erb
@@ -30,6 +30,10 @@
     <h3>KPI</h3>
 
     <div id="kpi_date">
+      <div style="margin-top: 10px;">
+        <span class="label label-info">显示方式:</span>
+        <%= select_tag :format, options_for_select([["Web", "html"], ["Excel File(MS 07 or later)", "xlsx"]], "html") %>
+      </div>
       <div class="entry-block">
         <!--<i class="icon-chevron-left" id="entry-minus"></i>-->
         <input type="text" readonly=true id="entry-date-picker"/>
@@ -105,15 +109,14 @@
 </div>
 
 <!--<input type="hidden" value="<%= @f %>" id="kpi-type-hidden"/>-->
-<script>
-
+<script type="text/javascript">
     var ClientHig = document.documentElement.clientHeight;
     var ClientWid = document.documentElement.clientWidth;
 
     var kpi_ul = document.getElementById('tabs');
     var kpi_li = kpi_ul.getElementsByTagName("li");
 
-    var DateFrom, DateTo;
+    var DateFrom, DateTo, SearchFormat;
 
     $(document).ready(function () {
 
@@ -130,35 +133,43 @@
     //set the Height for panel
     $('#tabs-1').css({height: ClientHig * 0.70 + 'px'}, {width: ClientWid * 0.8 + 'px'});
 
-    function kpi_ajax(id, startdate, enddate) {
+    function kpi_ajax(id, startdate, enddate, search_format) {
         show_loading(150, 0, 0, 150); //显示覆盖显示
-        $.ajax({
-            url: '/kpi_entries/history',
-            type: 'get',
-            data: {
-                id: id,
-                start_date: startdate,
-                end_date: enddate
-            },
-            dataType: "html",
-            success: function (data) {
-                $("#tabs-1").html(data);
-                remove_loading();
+        if (search_format == "html") {
+            $.ajax({
+                url: '/kpi_entries/history',
+                type: 'get',
+                data: {
+                    id: id,
+                    start_date: startdate,
+                    end_date: enddate,
+                    format: search_format
+                },
+                dataType: "html",
+                success: function (data) {
+                    $("#tabs-1").html(data);
+                    remove_loading();
 
-                var Date = document.getElementsByClassName('ChangeToLocalTime');
-                for (var i = 0; i < Date.length; i++) {
-                    var ServerDate = Date[i].getAttribute("title").toString();
-                    Date[i].innerHTML = ChangeDate(ServerDate);
+                    var Date = document.getElementsByClassName('ChangeToLocalTime');
+                    for (var i = 0; i < Date.length; i++) {
+                        var ServerDate = Date[i].getAttribute("title").toString();
+                        Date[i].innerHTML = ChangeDate(ServerDate);
+                    }
+
                 }
+            });
+        } else {
+            window.location.href = "http://" + window.location.host + "/kpi_entries/history?id=" + id + "&start_date=" + startdate + "&end_date=" + enddate + "&format=" + search_format;
 
-            }
-        });
+            remove_loading();
+        }
+
     }
 
     //进入界面的时候 进行请求
     function OnloadShow(startdate, enddate) {
         if (kpi_li.length != 0) {
-            kpi_ajax(kpi_li[0].title, startdate, enddate);
+            kpi_ajax(kpi_li[0].title, startdate, enddate, "html");
         } else {
             NothingToShow();
         }
@@ -172,7 +183,7 @@
                     DateFrom = document.getElementById('entry-date-picker').value;
                     DateTo = document.getElementById('entry-date-picker-to').value;
 
-                    kpi_ajax(kpi_li[i].title, DateFrom, DateTo);
+                    kpi_ajax(kpi_li[i].title, DateFrom, DateTo, "html");
                 }
             }(i))
         }
@@ -191,9 +202,11 @@
         DateFrom = document.getElementById('entry-date-picker').value;
         DateTo = document.getElementById('entry-date-picker-to').value;
 
+        SearchFormat = $('#format').val();
+
         for (var i = 0; i < kpi_li.length; i++) {
             if (kpi_li[i].getAttribute("aria-selected") == "true") {
-                kpi_ajax(kpi_li[i].title, DateFrom, DateTo);
+                kpi_ajax(kpi_li[i].title, DateFrom, DateTo, SearchFormat);
             }
         }
     }
