--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -180,9 +180,10 @@
   }
 
   function startRecentTime() {
-    var start_time;
+    var start_time=null;
     if ($('.RecentTime').val() == "") {
-      start_time = new Date().format('yyyy-MM-dd').toString() + ' ' + '00:00:00';
+        console.log(111111);
+      //start_time = new Date().format('yyyy-MM-dd').toString() + ' ' + '00:00:00';
     } else {
       if ($('.RecentTime').val() < 0) {
         $('.RecentTime').val(" ");
